--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,9 +1,8 @@
 .app.light {
     --bg-color: #e8e8ea;
     --inverted-bg-color: #000050;
-
     --primary-color: #020074;
     --secondary-color: #264bf0;
-    --inverted-primary-color: #ffffff;
+    --inverted-primary-color: #fff;
     --inverted-secondary-color: #d1d9fc;
 }
