Add storybook, loki

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,3 +10,12 @@
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
 }
+
+:root #storybook-root {
+    --bg-color: #000050;
+    --inverted-bg-color: #e8e8ea;
+    --primary-color: #3f8f3f;
+    --secondary-color: #003500;
+    --inverted-primary-color: #020074;
+    --inverted-secondary-color: #264bf0;
+}
