--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -7,16 +7,6 @@
     position: relative;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-}
-
-.Sidebar button {
-    top: 10px;
-    right: 25px;
-    color: var(--inverted-secondary-color);
-}
-
 .switchers {
     position: absolute;
     bottom: 20px;
@@ -29,7 +19,72 @@
     margin-left: 20px;
 }
 
+.collapseBtn {
+    bottom: 0;
+}
+
+.Sidebar button {
+    color: var(--inverted-secondary-color);
+}
+
 .ToggleIcon {
-    width: 30px;
-    height: 30px;
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    z-index: 99;
+}
+
+.background {
+    background: var(--bg-color);
+    color: var(--primary-color);
+    border: none;
+}
+
+.backgroundInverted {
+    background: var(--inverted-bg-color);
+    color: var(--inverted-primary-color);
+    border: none;
+}
+
+.items {
+    margin-top: 20px;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.item {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.link {
+    margin-left: 10px;
+    opacity: 1;
+}
+
+.icon {
+    fill: var(--inverted-primary-color);
+    width: 20px;
+    height: 20px;
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .lang {
+        margin-left: 0;
+    }
+
+    .link {
+        opacity: 0;
+        transition: 0.2s opacity;
+        width: 0;
+    }
 }
