Add modal and portal

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -6,3 +6,8 @@
     --inverted-primary-color: #020074;
     --inverted-secondary-color: #264bf0;
 }
+
+body .modal.dark {
+    --modal-bg-color: #000050;
+    --modal-primary-color: #3f8f3f;
+}
