--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -6,3 +6,8 @@
     --inverted-primary-color: #fff;
     --inverted-secondary-color: #d1d9fc;
 }
+
+body .modal.light {
+    --modal-bg-color: #e8e8ea;
+    --modal-primary-color: #020074;
+}
