--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -7,11 +7,16 @@
     padding: 10px 15px;
 }
 
-.clear {
+.clear, .clearInverted {
     padding: 0;
     background: none;
     border: none;
     outline: none;
+    color: var(--primary-color);
+}
+
+.clearInverted {
+    color: var(--inverted-primary-color);
 }
 
 .outline {
