--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,4 +1,4 @@
-.app.light {
+body .light {
     --bg-color: #e8e8ea;
     --inverted-bg-color: #000050;
     --primary-color: #020074;
@@ -10,4 +10,5 @@
 body .modal.light {
     --modal-bg-color: #e8e8ea;
     --modal-primary-color: #020074;
+    --modal-input-border: #000050;
 }
