--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -19,7 +19,9 @@
     --modal-z-index: 10;
 
     // Цвета
-    --overlay-color: rgba( 0 0 0 / 60% ) 
+    --overlay-color: rgba( 0 0 0 / 60% );
+    --red-light: #f00;
+    --red-dark: #7c0000;
 }
 
 :root #storybook-root {
