--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -2,9 +2,18 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    align-items: center;
+}
+
+.loginTitle {
+    margin-bottom: 20px;
+}
+
+.loginError {
+    margin: 15px 0;
+    text-align: center;
 }
 
 .loginBtn {
-    margin-top: 15px;
-    margin-left: auto;
+    margin-top: 20px;
 }
