Update user page, add auth only route, add user inputs

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -14,6 +14,9 @@
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
+    --avatar-small-size: 40px;
+    --avatar-normal-size: 70px;
+    --avatar-large-size: 100px;
 
     // z - Индексы
     --modal-z-index: 10;
