--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -1,20 +1,24 @@
 .ProfileCard {
     padding: 20px;
-    border: 2px solid var(--inverted-bg-color)
+    border: 2px solid var(--inverted-bg-color);
 }
 
-.header {
-    display: flex;
-}
-
-.editBtn {
-    margin-left: auto;
-}
-
-.data {
-    margin-top: 30px;
+.editing {
+    border: 2px solid var(--inverted-primary-color);
 }
 
 .input {
     margin-top: 10px ;
+}
+
+.loading, .error {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.avatarWrapper {
+    display: flex;
+    justify-content: center;
 }
