--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -7,3 +7,14 @@
     border: 2px solid var(--primary-color);
     border-radius: 10px;
 }
+
+.readonly {
+    border: 2px solid transparent;
+    opacity: 0.7;
+
+    input {
+        border: none;
+        background: none;
+        outline: none;
+    }
+}
