Add skeleton preloading, code block component and article page

--- a/src/app/styles/themes/light_blue.scss
+++ b/src/app/styles/themes/light_blue.scss
@@ -5,6 +5,9 @@ body .light_blue {
     --secondary-color: #2d8bb9;
     --inverted-primary-color: #F4F4FB;
     --inverted-secondary-color: #dfdfdf;
+    --skeleton-color: #fff;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
+    --code-bg: #fff;
 }
 
 body .modal.light_blue{
