--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,6 +5,9 @@ body .dark {
     --secondary-color: #003500;
     --inverted-primary-color: #020074;
     --inverted-secondary-color: #264bf0;
+    --skeleton-color: #1515ad;
+    --skeleton-shadow: #2b2be8;
+    --code-bg: #1212a1;
 }
 
 body .modal.dark {
