--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,6 +5,9 @@ body .light {
     --secondary-color: #264bf0;
     --inverted-primary-color: #fff;
     --inverted-secondary-color: #d1d9fc;
+    --skeleton-color: #fff;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
+    --code-bg: #fff;
 }
 
 body .modal.light {
