--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -20,7 +20,7 @@ body {
 
 .page-wrapper {
     flex-grow: 1;
-    width: 100%;
+    flex-shrink: 100;
     padding: 20px 20px 20px 45px;
     height: calc(100vh - var(--navbar-height));
     overflow-y: auto;
