Add article list, article item and skeletons for articles loading

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -43,4 +43,5 @@
     --inverted-secondary-color: #264bf0;
     --skeleton-color: #1515ad;
     --skeleton-shadow: #2b2be8;
+    --card-bg: #e0e0e7;
 }
