--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -8,6 +8,7 @@ body .dark {
     --skeleton-color: #1515ad;
     --skeleton-shadow: #2b2be8;
     --code-bg: #1212a1;
+    --card-bg: #0d0d6b;
 }
 
 body .modal.dark {
