--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -8,6 +8,7 @@ body .light {
     --skeleton-color: #fff;
     --skeleton-shadow: rgba(0 0 0 / 20%);
     --code-bg: #fff;
+    --card-bg: #e0e0e7;
 }
 
 body .modal.light {
