--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,14 +1,48 @@
-.ArticleList {
-}
-
 .BLOCK {
     display: flex;
     flex-wrap: wrap;
+    flex-grow: 1;
     gap: 30px;
+    width: 100%;
+    
+    .card {
+        margin: 30px 30px 0;
+    }
 }
 
 .LIST {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 100%;
+    flex-grow: 1;
+    
+    .card {
+        margin: 30px;
+    }
+}
+
+.itemsWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 8px;
+    margin: 0 30px;
+}
+
+.ItemContainer {
+    width: 230px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 8px;
+    margin-right: 30px;
+
+    @media (width <= 1024px) {
+        width: 50%;
+    }
+
+    @media (300px >= width >= 1024px) {
+        width: 100%;
+    }
 }
