--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -42,6 +42,7 @@
 .BLOCK {
     width: 230px;
     transition: 0.2s ease all;
+    display: inline-block;
     cursor: pointer;
 
     .imageWrapper {
