--- a/src/pages/ArticlePage/ui/ArticlePage/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ui/ArticlePage/ArticlePage.module.scss
@@ -1,5 +1,8 @@
 .ArticlePage {
-    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-self: auto;
+    align-content: stretch;
 }
 
 .list {
