--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -1,7 +1,3 @@
-.ArticleDetailsPage {
-    min-height: 100%;
-}
-
 .commentsTitle {
     margin-top: 50px;
 }
@@ -13,4 +9,5 @@
     overflow-y: hidden;
     overflow-x: auto;
     padding-bottom: 20px;
+    height: 350px;
 }
