--- a/src/app/styles/themes/light_blue.scss
+++ b/src/app/styles/themes/light_blue.scss
@@ -9,6 +9,7 @@ body .light_blue {
     --skeleton-shadow: rgba(0 0 0 / 20%);
     --code-bg: #fff;
     --card-bg: #e0e0e7;
+    --listbox-bg: #e0e0e7;
 }
 
 body .modal.light_blue{
