Add drawer, and add hook for device detection

--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -5,6 +5,9 @@
     opacity: 0;
     transition: 0.3s ease opacity;
     pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .overlay {
