--- a/src/app/styles/themes/light_blue.scss
+++ b/src/app/styles/themes/light_blue.scss
@@ -10,6 +10,17 @@ body .light_blue {
     --code-bg: #fff;
     --card-bg: #e0e0e7;
     --listbox-bg: #e0e0e7;
+
+    // redesigned
+    --dark-bg-redesigned: #FFF3D6;
+    --bg-redesigned: #F0C048;
+    --light-bg-redesigned: #F2D791;
+    --text-redesigned: #1B1311;
+    --hint-redesigned: #B8B2A2;
+    --cancel-redesigned: #FF5E5E; 
+    --save-redesigned: #52FA81;
+    --icon-redesigned: #4875F0;
+    --accent-redesigned: #1D59FF;
 }
 
 body .modal.light_blue{
