--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,8 +1,13 @@
 :root {
+    // FONT_FAMILY
+    --font-family-main: 'Tahoma', 'Arial', serif;
+    --font-family-text-redesigned: 'Open Sans', sans-serif;
+    --font-family-title-redesigned: 'Roboto', sans-serif;
+
+    // FONT_SIZE
     --font-size-sm: 12px;
     --font-line-sm: 16px;
     --font-sm: var(--font-size-sm) / var(--font-line-sm) var(--font-family-main);
-    --font-family-main: 'Tahoma', 'Arial', serif;
     --font-size-m: 20px;
     --font-line-m: 24px;
     --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
@@ -13,7 +18,13 @@
     --font-line-xl: 40px;
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
-    // Размеры
+    // FONT_SIZE_REDESIGNED
+    --font-sm-redesigned: var(--font-size-sm) / var(--font-line-sm) var(--font-family-text-redesigned);
+    --font-m-redesigned: var(--font-size-m) / var(--font-line-m) var(--font-family-text-redesigned);
+    --font-l-redesigned: var(--font-size-l) / var(--font-line-l) var(--font-family-title-redesigned);
+    --font-xl-redesigned: var(--font-size-xl) / var(--font-line-xl) var(--font-family-title-redesigned);
+
+    // SIZES 
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
@@ -25,11 +36,11 @@
     --icon-l-size: 60px;
     --icon-xl-size: 80px;
 
-    // z - Индексы
+    // Z - INDEXES
     --modal-z-index: 30;
     --overlay-z-index: 20;
 
-    // Цвета
+    // COLORS
     --overlay-color: rgba( 0 0 0 / 60% );
     --red-light: #f00;
     --red-dark: #7c0000;
