--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-areas:
         'sidebar content rightbar';
-    grid-template-columns: 284px 1fr 176px;
+    grid-template-columns: 284px 1fr 100px;
 }
 
 .content {
@@ -11,6 +11,7 @@
     max-width: 1200px;
     justify-self: center;
     padding: 32px;
+    width: 100%;
 }
 
 .rightbar,
@@ -22,7 +23,6 @@
 
 .sidebar {
     grid-area: sidebar;
-    justify-self: center;
     padding: 32px;
 }
 
