--- a/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
@@ -15,6 +15,7 @@
     height: 300px;
     border-radius: 50%;
     opacity: 0.6;
+    pointer-events: none;
 }
 
 .gradientSmall {
@@ -29,4 +30,5 @@
         rgb(94 211 243 / 0%) 100%);
     border-radius: 50%;
     opacity: 0.6;
+    pointer-events: none;
 }
