--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,51 +5,52 @@
     color: var(--inverted-secondary-color);
     transition: width 0.3s;
     position: relative;
+
+    .switchers {
+        position: absolute;
+        bottom: 20px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .lang {
+        margin-left: 20px;
+    }
+
+    .collapseBtn {
+        bottom: 0;
+    }
+
+    .Sidebar button {
+        color: var(--inverted-secondary-color);
+    }
+
+    .ToggleIcon {
+        position: absolute;
+        width: 70%;
+        height: 70%;
+        z-index: 2;
+    }
+
+    .background {
+        background: var(--bg-color);
+        color: var(--primary-color);
+        border: none;
+    }
+
+    .backgroundInverted {
+        background: var(--inverted-bg-color);
+        color: var(--inverted-primary-color);
+        border: none;
+    }
+
+    .items {
+        margin-top: 20px;
+        margin-left: 30px;
+    }
 }
 
-.switchers {
-    position: absolute;
-    bottom: 20px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.lang {
-    margin-left: 20px;
-}
-
-.collapseBtn {
-    bottom: 0;
-}
-
-.Sidebar button {
-    color: var(--inverted-secondary-color);
-}
-
-.ToggleIcon {
-    position: absolute;
-    width: 70%;
-    height: 70%;
-    z-index: 2;
-}
-
-.background {
-    background: var(--bg-color);
-    color: var(--primary-color);
-    border: none;
-}
-
-.backgroundInverted {
-    background: var(--inverted-bg-color);
-    color: var(--inverted-primary-color);
-    border: none;
-}
-
-.items {
-    margin-top: 20px;
-    margin-left: 30px;
-}
 
 .collapsed {
     width: var(--sidebar-width-collapsed);
@@ -69,8 +70,53 @@
     width: 220px;
     height: 100%;
     border-radius: 32px;
+    position: relative;
+
+    .appLogo {
+        padding-top: 20px;
+    }
+
+    .items {
+        margin-top: 40px;
+    }
+
+    .collapseBtn {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        z-index: 10;
+        transform: rotate(90deg);
+    }
+
+    .switchers {
+        position: absolute;
+        bottom: 40px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        gap: 10px;
+        align-self: center;
+    }
 }
 
-.appLogo {
-    padding-top: 20px;
+.collapsedRedesigned {
+    width: 50px;;
+
+    .items {
+        display: flex;
+        align-items: center;
+    }
+
+    .lang {
+        margin-left: 0;
+    }
+
+    .collapseBtn {
+        transform: rotate(-90deg);
+    }
+
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
 }
