--- a/src/widgets/Sidebar/ui/SidebarItem/ui/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/ui/SidebarItem.module.scss
@@ -9,16 +9,37 @@
     opacity: 1;
 }
 
-.icon {
-    fill: var(--inverted-primary-color);
-    width: 20px;
-    height: 20px;
-}
-
 .collapsed {
     .link {
         opacity: 0;
         transition: 0.2s opacity;
         width: 0;
     }
+}
+
+.itemRedesigned {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    border-left: 2px solid transparent;
+}
+
+.collapsedRedesigned {
+    padding-left: 10px;
+
+    .link {
+        opacity: 0;
+        width: 0;
+        margin: 0;
+    }
+}
+
+.active {
+    background: linear-gradient(89.97deg,
+        rgb(29 89 255 / 30%) 1.15%,
+        rgb(94 211 243 / 0%) 99.97%);
+    border-left: 2px solid var(--accent-redesigned);
 }
