--- a/src/shared/ui/redesigned/Card/Card.module.scss
+++ b/src/shared/ui/redesigned/Card/Card.module.scss
@@ -1,5 +1,4 @@
 .Card {
-    padding: 24px;
     border-radius: 12px;
     background: var(--card-bg);
     border: 1px solid transparent;
@@ -7,6 +6,18 @@
 
 .normal {
     background: var(--dark-bg-redesigned);
+}
+
+.no-round {
+    border-radius: 0;
+}
+
+.sm-round {
+    border-radius: 12px;
+}
+
+.xl-round {
+    border-radius: 40px;
 }
 
 .outlined {
