--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -1,10 +1,34 @@
 .Button {
     cursor: pointer;
     color: var(--text-redesigned);
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 8px 12px;
+
+    .addonLeft svg, .addonRight svg {
+        color: var(--hint-redesigned);
+    }
 
     &:hover {
         color: var(--accent-redesigned);
+
+        .addonLeft svg, .addonRight svg {
+            color: var(--accent-redesigned);
+        }
     }
+
+    .withAddonLeft {
+        padding-left: 8px;
+    }
+
+    .withAddonRight {
+        padding-right: 8px;
+    }
+}
+
+.addonLeft, .addonRight {
+    display: flex;
 }
 
 .clear {
@@ -19,7 +43,6 @@
     border: none;
     outline: none;
     border-radius: 34px;
-    padding: 8px;
 }
 
 .square {
