Redesign profile card

--- a/src/shared/ui/redesigned/Input/Input.module.scss
+++ b/src/shared/ui/redesigned/Input/Input.module.scss
@@ -6,7 +6,6 @@
     border-radius: 48px;
     padding: 8px 16px;
     border: 2px solid var(--icon-redesigned);
-    height: 38px;
     width: 100%;
 
     .withAddonLeft {
@@ -16,6 +15,18 @@
     .withAddonRight {
         padding-right: 8px;
     }
+}
+
+.s {
+    height: 32px;
+}
+
+.m {
+    height: 38px;
+}
+
+.l {
+    height: 44px;
 }
 
 .addonLeft, .addonRight {
