Add outline for redesigned button, redesigne article list item

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -22,9 +22,9 @@ body {
 }
 
 .app_redesigned {
-    height: 100vh;
     background: var(--bg-redesigned);
     font: var(--font-m-redesigned);
+    height: 100svh;
     color: var(--text-redesigned)
 }
 
