--- a/src/shared/layouts/MainLayout/MainLayout.module.scss
+++ b/src/shared/layouts/MainLayout/MainLayout.module.scss
@@ -1,9 +1,10 @@
 .MainLayout {
-    min-height: 100vh;
+    height: 100%;
     display: grid;
     grid-template-areas:
         'sidebar content rightbar';
     grid-template-columns: min-content 1fr 100px;
+    overflow-y: auto;
 }
 
 .content {
