--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -101,3 +101,14 @@
         text-overflow: ellipsis;
     }
 }
+
+.ArticleListItemRedesigned {
+    &.LIST {
+        width: 100%;
+    }
+
+    &.BLOCK {
+        width: 240px;
+        height: 350px;
+    }
+}
