Redesign comments, rating card

--- a/src/shared/ui/deprecated/StarRating/StarRating.module.scss
+++ b/src/shared/ui/deprecated/StarRating/StarRating.module.scss
@@ -1,13 +1,26 @@
-.starRating {
-    cursor: pointer;
+.StarRating {
+    .hovered {
+        fill: var(--primary-color);
+    }
 }
 
 .normal {
     fill: none;
 }
 
-.hovered {
-    fill: var(--primary-color)
+.StarRatingRedesigned {
+    .normal {
+        fill: none;
+    }
+
+    .hovered {
+        fill: var(--icon-redesigned);
+    }
+}
+
+
+.starIcon {
+    cursor: pointer;
 }
 
 .selected {
