--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -44,11 +44,28 @@ body {
 
 *::-webkit-scrollbar-thumb {
   border-radius: 10px;
+  background-color: var(--icon-redesigned);
+  border: 1px solid var(--accent-redesigned)
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: var(--light-bg-redesigned);
+}
+
+.app *::-webkit-scrollbar {
+  width: 9px;
+  height: 7px;
+  background-color: var(--bg-color);
+}
+
+.app *::-webkit-scrollbar-thumb {
+  border-radius: 10px;
   background-color: var(--inverted-primary-color);
   border: 1.5px solid var(--primary-color)
 }
 
-*::-webkit-scrollbar-track {
+.app *::-webkit-scrollbar-track {
   border-radius: 10px;
   background-color: var(--card-bg);
 }
