--- a/src/entities/Article/ui/ArticleListItem/ArticleListItemRedesigned/ArticleListItemRedesigned.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItemRedesigned/ArticleListItemRedesigned.module.scss
@@ -15,11 +15,11 @@
 .BLOCK {
     .card {
         width: 240px;
-        height: 350px;
+        height: 100%;
         overflow: hidden;
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        gap: 30px;
     }
 
     .img {
